--- a/LabManager/wwwroot/css/site.css
+++ b/LabManager/wwwroot/css/site.css
@@ -91,58 +91,10 @@ body {
     width: 100%;
 }
 
-/*.labthing-table-row
+.chemicals-table 
 {
-
-}*/
-
-.labthing-table-name-header
-{
-    width: 20%;
-}
-
-.labthing-table-serialno-header {
-    width: 5%;
-}
-
-.labthing-table-modelno-header {
-    width: 5%;
-}
-
-.labthing-table-acquisitiondate-header {
-    width: 5%;
-}
-
-.labthing-table-calibratedon-header {
-    width: 5%;
-}
-
-.labthing-table-calibrationdue-header {
-    width: 5%;
-}
-
-.labthing-table-maintenanceon-header {
-    width: 5%;
-}
-
-.labthing-table-maintenancedue-header {
-    width: 5%;
-}
-
-.labthing-table-note-header {
-    width: 10%;
-}
-
-.labthing-table-employee-header {
-    width: 10%;
-}
-
-.labthing-table-category-header {
-    width: 10%;
-}
-
-.labthing-table-manufacturer-header {
-    width: 10%;
+    table-layout: fixed;
+    width: 100%;
 }
 
 .labthing-table-button-group
@@ -152,12 +104,14 @@ body {
     display: inline-flex;
 }
 
-.text-center
+.chemical-table-button-group 
 {
-    display: flex;
+    position: relative;
+    display: -ms-inline-flexbox;
+    display: inline-flex;
 }
 
 .inventory-container
 {
-    align-items: baseline center;
+    align-content: center;
 }
