--- a/LabManager/wwwroot/css/site.css
+++ b/LabManager/wwwroot/css/site.css
@@ -49,7 +49,6 @@ body {
   position: absolute;
   bottom: 0;
   width: 100%;
-  white-space: nowrap;
   /* Set the fixed height of the footer here */
   height: 60px;
   line-height: 60px; /* Vertically center the text there */
@@ -111,7 +110,11 @@ body {
     display: inline-flex;
 }
 
+
+@media (min-width: 768px) {
 .inventory-container
 {
-    align-content: center;
+    width: 600px;
+    margin: 0 auto;
+}
 }
