updated view headers, updated labthing to lab item, populated delete views for chemicals and labthing to include dropdown data, corrected misspellings and typos

--- a/LabManager/Views/Chemicals/Details.cshtml
+++ b/LabManager/Views/Chemicals/Details.cshtml
@@ -7,7 +7,7 @@
 <h1>View Chemical Details</h1>
 
 <div>
-    <h4>Chemical</h4>
+    @*<h4>Chemical</h4>*@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
