--- a/LabManager/Views/Chemicals/Index.cshtml
+++ b/LabManager/Views/Chemicals/Index.cshtml
@@ -80,9 +80,9 @@
                 </a>
                 </div>
             </th>
-            <th class="m-2">
+            @*<th class="m-2">
                 @Html.DisplayNameFor(model => model.COA)
-            </th>
+            </th>*@
             <th class="m-1">
                 @Html.DisplayNameFor(model => model.OpenedBy)
             </th>
@@ -141,9 +141,9 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.ExpirationDate)
                 </td>
-                <td>
+                @*<td>
                     @Html.DisplayFor(modelItem => item.COA)
-                </td>
+                </td>*@
                 <td>
                     @Html.DisplayFor(modelItem => item.OpenedBy)
                 </td>
