--- a/LabManager/Views/LabThings/Details.cshtml
+++ b/LabManager/Views/LabThings/Details.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>View LabThing Details</h1>
+<h1>View Lab Item Details</h1>
 
 <div>
-    <h4>LabThing</h4>
+    @*<h4>Lab Item</h4>*@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
