--- a/LabManager/Views/Chemicals/Create.cshtml
+++ b/LabManager/Views/Chemicals/Create.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Add New Chemical</h1>
 
-<h4>Chemical</h4>
+@*<h4>Chemical</h4>*@
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -46,16 +46,16 @@
             @*Dropdowns:*@
 
             <div class="form-group">
-                <label asp-for="Chemical.ChemicalTypeID" class="control-label"></label>
+                <label asp-for="Chemical.ChemicalType" class="control-label"></label>
                 <select asp-for="Chemical.ChemicalTypeID" class="form-control" asp-items="@Model.ChemicalType"></select>
             </div>
             <div class="form-group">
-                <label asp-for="Chemical.ManufacturerID" class="control-label"></label>
+                <label asp-for="Chemical.Manufacturer" class="control-label"></label>
                 <select asp-for="Chemical.ManufacturerID" class="form-control" asp-items="@Model.Manufacturer"></select>
             </div>
 
             <div class="form-group">
-                <label asp-for="Chemical.EmployeeId" class="control-label"></label>
+                <label asp-for="Chemical.Employee" class="control-label"></label>
                 <select asp-for="Chemical.EmployeeId" class="form-control" asp-items="@Model.Employee"></select>
             </div>
             @*********************************************************************************@
