--- a/LabManager/Views/Chemicals/Edit.cshtml
+++ b/LabManager/Views/Chemicals/Edit.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Edit Chemical</h1>
 
-<h4>Chemical</h4>
+@*<h4>Chemical</h4>*@
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -32,7 +32,7 @@
             <div class="form-group">
                 <label asp-for="OpenDate" class="control-label"></label>
                 <input asp-for="OpenDate" class="form-control" />
-                <span asp-validation-for="OpenDate" class="text-danger"></span>
+                @*<span asp-validation-for="OpenDate" class="text-danger"></span>*@
             </div>
             <div class="form-group">
                 <label asp-for="ExpirationDate" class="control-label"></label>
@@ -47,7 +47,7 @@
             <div class="form-group">
                 <label asp-for="OpenedBy" class="control-label"></label>
                 <input asp-for="OpenedBy" class="form-control" />
-                <span asp-validation-for="OpenedBy" class="text-danger"></span>
+                @*<span asp-validation-for="OpenedBy" class="text-danger"></span>*@
             </div>
             <div class="form-group">
                 <label asp-for="Note" class="control-label"></label>
