--- a/LabManager/Views/LabThings/Delete.cshtml
+++ b/LabManager/Views/LabThings/Delete.cshtml
@@ -4,11 +4,11 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete LabThing</h1>
+<h1>Delete Lab Item</h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>LabThing</h4>
+    @*<h4>Lab Item</h4>*@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -66,22 +66,22 @@
             @Html.DisplayFor(model => model.Note)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.EmployeeId)
+            @Html.DisplayNameFor(model => model.Employee)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.EmployeeId)
+            @Html.DisplayFor(model => model.Employee.FirstName)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CategoryID)
+            @Html.DisplayNameFor(model => model.Category)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CategoryID)
+            @Html.DisplayFor(model => model.Category.Name)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ManufacturerID)
+            @Html.DisplayNameFor(model => model.Manufacturer)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ManufacturerID)
+            @Html.DisplayFor(model => model.Manufacturer.Name)
         </dd>
     </dl>
     
