--- a/LabManager/Views/Home/Dashboard.cshtml
+++ b/LabManager/Views/Home/Dashboard.cshtml
@@ -8,7 +8,7 @@
     <h1 class="display-4">Welcome To Your Dashboard!</h1>
     <div class="inventory-container d-flex justify-content-between flex-wrap">
 
-        <div class="chemicals-container mr-10">
+        <div class="chemicals-container mr-12 pt-5">
             @*Chemicals link: *@
             <a class="chemicals-link" asp-action="Index" asp-controller="Chemicals">
                 <img src="~/images/chemistry.png" />
@@ -16,7 +16,7 @@
             <h3>Chemicals Inventory</h3>
         </div>
 
-        <div class="labthing-container mr-10">
+        <div class="labthing-container mr-12 pt-5">
             @*LabThings link: *@
             <a class="labthings-link" asp-action="Index" asp-controller="LabThings">
                 <img src="~/images/centrifuge.png" />
