updated 'openedby' date to be nullable; not every chemical will or should be opened immediately upon receipt; also commented out 'hiredate' for employee because it is currently unused

--- a/LabManager/Areas/Identity/Pages/Account/Register.cshtml
+++ b/LabManager/Areas/Identity/Pages/Account/Register.cshtml
@@ -22,11 +22,11 @@
                 <input asp-for="Input.LastName" class="form-control" />
                 <span asp-validation-for="Input.LastName" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @*<div class="form-group">
                 <label asp-for="Input.HireDate"></label>
                 <input asp-for="Input.HireDate" class="form-control" />
                 <span asp-validation-for="Input.HireDate" class="text-danger"></span>            
-            </div>
+            </div>*@
             <div class="form-group">
                 <label asp-for="Input.Email"></label>
                 <input asp-for="Input.Email" class="form-control" />
